Finished install system to Windows on x86 and x64 and changed Logo dimensions (100x100)