@@ -9,12 +9,15 @@ import org.apache.commons.io.FileUtils;
 
 public class MongoDBUtils {
 	
+	private static String name86MongoDB = "mongodb-win32-i386-2.4.8";
+	private static String name64MongoDB = "mongodb-win32-x86_64-2008plus-2.4.8";
+	private static String fileRoot = ".zip";
+	
 	public static void startMongoDExe() {
 		
 		try {
 			System.out.println("Starting Windows mongoDB server on " + MainFrame.path.getPathToExe());
-			ProcessBuilder pb = new ProcessBuilder();
-			Process p = Runtime.getRuntime().exec(MainFrame.path.getPathToExe());
+			Runtime.getRuntime().exec(MainFrame.path.getPathToExe());
 			System.out.println("mongod.exe started sucefully!");
 		} catch (IOException e) {
 			e.printStackTrace();
@@ -24,9 +27,29 @@ public class MongoDBUtils {
 	public static void installMongoDExe() {
 		System.out.println("Starting install of mongoDB on " + MainFrame.path.getPathToMongoDB());
 		ZipFile zipFile;
+		File destDir = new File(MainFrame.path.getPathToMongoDB()+File.separator);
 		try {
 			zipFile = new ZipFile(MainFrame.path.getPathToMongoDB()+File.separator+"mongoDB.zip");
 			zipFile.extractAll(MainFrame.path.getPathToMongoDB());
+			if (System.getProperty("os.arch").contains("86") || System.getProperty("os.arch").contains("i386")) {
+				File srcDir = new File(MainFrame.path.getPathToMongoDB()+File.separator+name86MongoDB);
+				try {
+					FileUtils.copyDirectory(srcDir, destDir);
+					srcDir.delete();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+			} else if (System.getProperty("os.arch").contains("64")) {
+				File srcDir = new File(MainFrame.path.getPathToMongoDB()+File.separator+name64MongoDB);
+				try {
+					FileUtils.copyDirectory(srcDir, destDir);
+					srcDir.delete();
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+			} else {
+				System.out.println("Unknow architecture.");
+			}
 		} catch (ZipException e) {
 			e.printStackTrace();
 		}
@@ -37,9 +60,9 @@ public class MongoDBUtils {
 		System.setProperty("http.agent", "Mozilla/5.0 (X11; Linux i686; rv:21.0) Gecko/20100101 Firefox/21.0");
 		try {
 			if (System.getProperty("os.arch").contains("86") || System.getProperty("os.arch").contains("i386")) {
-				FileUtils.copyURLToFile(new URL("http://fastdl.mongodb.org/win32/mongodb-win32-i386-2.4.8.zip"), new File(MainFrame.path.getPathToMongoDB()+File.separator+"mongoDB.zip"));
+				FileUtils.copyURLToFile(new URL("http://fastdl.mongodb.org/win32/"+MongoDBUtils.name86MongoDB+MongoDBUtils.fileRoot), new File(MainFrame.path.getPathToMongoDB()+File.separator+"mongoDB.zip"));
 			} else if (System.getProperty("os.arch").contains("64")) {
-				FileUtils.copyURLToFile(new URL("http://fastdl.mongodb.org/win32/mongodb-win32-x86_64-2008plus-2.4.8.zip"), new File(MainFrame.path.getPathToMongoDB()+File.separator+"mongoDB.zip"));
+				FileUtils.copyURLToFile(new URL("http://fastdl.mongodb.org/win32/"+MongoDBUtils.name64MongoDB+MongoDBUtils.fileRoot), new File(MainFrame.path.getPathToMongoDB()+File.separator+"mongoDB.zip"));
 			} else {
 				System.out.println("Unknow architecture.");
 			}
